--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Vault Web App</title>
 </head>
 <body>
-    <h1>Welcome to the Vault Web App</h1>
+    <h1>Welcome! The Web App to demo Vault KV read and write</h1>
     <form action="/read_secret" method="GET">
         <button type="submit">Read Secret</button>
     </form>
