--- a/templates/result.html
+++ b/templates/result.html
@@ -1,14 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!doctype html>
+<html>
+  <head>
     <title>Result</title>
-</head>
-<body>
+    <script>
+      function copyUrlToClipboard() {
+        const urlElement = document.getElementById('wrapUrl');
+        urlElement.select();
+        document.execCommand('copy');
+        alert('URL copied to clipboard!');
+      }
+    </script>
+  </head>
+  <body>
     <h1>{{ message }}</h1>
     {% if url %}
-      <pre>{{ url }}</pre>
+      <pre><input type="text" id="wrapUrl" value="{{ url }}" readonly style="border: none;"></pre>
+      <button onclick="copyUrlToClipboard()">Copy URL</button>
     {% endif %}
     <a href="/">Back</a>
   </body>
